fixed overflow of contents in new user css, styled nav bar and put description of page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,53 +25,81 @@ html {
 }
 
 body {
-  background-color: rgb(22, 22, 22);
+  background-color: black;
   /* Use a system font, if none are available use an available sans-sarif font */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
         Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  margin: 0;
+  margin: 0 auto;
   color: white;
 }
 
 /* -----------------------------Nav */
 nav {
-  background-color: rgb(0, 0, 0);
-  font-size: 1.6rem;
+  background-color: rgb(12, 12, 12);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 10px;
+  padding: 20px 60px;
 }
 
 a {
-  color: white;
   text-decoration: none;
 }
 
-a:hover {
-  color: white;
+.title {
+  display: flex;
+  align-items: center;
 }
 
+.title a{
+  color: white;
+  font-size: 24px;
+  margin-left: 10px;
+}
+
+/*--------------------- Root Page */
 main {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
-/*--------------------- Root Page */
+
+
 /* ------not logged in */
 .welcome {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 40px 80px;
+  max-width: 900px;
+  margin: 0 auto;
 }
 
-h1 {
-  font-size: 3.6rem;
+.googleLink {
+  font-size: 18px;
+  color: #3EDBF0;
+  padding: 2px;
+  box-shadow: inset 2px 2px 12px currentColor;
+  transition: all 0.3s;
+}
+
+.googleLink span {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.googleLink:hover {
+  box-shadow: inset 0px 0px 0px currentColor;
+  border-bottom: 2px solid currentColor;
+}
+
+.welcome h2 {
+  font-size: 44px;
+  padding: 20px 0;
 }
 
 .cardAnimate {
+  width: 50%;
   border-radius: 10px;
   box-shadow: 2px 2px 18px rgb(121, 121, 121);
   transition: all 0.5s;
@@ -82,7 +110,11 @@ h1 {
 }
 
 .siteDesc {
-  margin-top: 50px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 24px;
+  padding: 20px 20px;
+  max-width: 700px;
+  color: rgba(255, 255, 255, 0.5);
+  line-height: 40px;
 }
 
